Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/USkinnedMeshComponent.h

	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_ActiveMorphTargets_GET(USkinnedMeshComponent* Ptr) { return ConvertToManage_TemplatePointerDescription(Ptr->ActiveMorphTargets); }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_ActiveMorphTargets_SET(USkinnedMeshComponent* Ptr, INT_PTR Value) { Ptr->ActiveMorphTargets = *(TArray<FActiveMorphTarget>*)Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_bCanHighlightSelectedSections_GET(USkinnedMeshComponent* Ptr) { return Ptr->bCanHighlightSelectedSections; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_bCanHighlightSelectedSections_SET(USkinnedMeshComponent* Ptr, uint8 Value) { Ptr->bCanHighlightSelectedSections = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_bCastCapsuleDirectShadow_GET(USkinnedMeshComponent* Ptr) { return Ptr->bCastCapsuleDirectShadow; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_bCastCapsuleDirectShadow_SET(USkinnedMeshComponent* Ptr, uint8 Value) { Ptr->bCastCapsuleDirectShadow = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_bCastCapsuleIndirectShadow_GET(USkinnedMeshComponent* Ptr) { return Ptr->bCastCapsuleIndirectShadow; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_bCastCapsuleIndirectShadow_SET(USkinnedMeshComponent* Ptr, uint8 Value) { Ptr->bCastCapsuleIndirectShadow = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_bComponentUseFixedSkelBounds_GET(USkinnedMeshComponent* Ptr) { return Ptr->bComponentUseFixedSkelBounds; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_bComponentUseFixedSkelBounds_SET(USkinnedMeshComponent* Ptr, uint8 Value) { Ptr->bComponentUseFixedSkelBounds = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_bConsiderAllBodiesForBounds_GET(USkinnedMeshComponent* Ptr) { return Ptr->bConsiderAllBodiesForBounds; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_bConsiderAllBodiesForBounds_SET(USkinnedMeshComponent* Ptr, uint8 Value) { Ptr->bConsiderAllBodiesForBounds = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_bCPUSkinning_GET(USkinnedMeshComponent* Ptr) { return Ptr->bCPUSkinning; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_bCPUSkinning_SET(USkinnedMeshComponent* Ptr, uint8 Value) { Ptr->bCPUSkinning = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_bDisableMorphTarget_GET(USkinnedMeshComponent* Ptr) { return Ptr->bDisableMorphTarget; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_bDisableMorphTarget_SET(USkinnedMeshComponent* Ptr, uint8 Value) { Ptr->bDisableMorphTarget = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_bDisplayBones_DEPRECATED_GET(USkinnedMeshComponent* Ptr) { return Ptr->bDisplayBones_DEPRECATED; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_bDisplayBones_DEPRECATED_SET(USkinnedMeshComponent* Ptr, uint8 Value) { Ptr->bDisplayBones_DEPRECATED = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_bDisplayDebugUpdateRateOptimizations_GET(USkinnedMeshComponent* Ptr) { return Ptr->bDisplayDebugUpdateRateOptimizations; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_bDisplayDebugUpdateRateOptimizations_SET(USkinnedMeshComponent* Ptr, uint8 Value) { Ptr->bDisplayDebugUpdateRateOptimizations = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_bEnableUpdateRateOptimizations_GET(USkinnedMeshComponent* Ptr) { return Ptr->bEnableUpdateRateOptimizations; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_bEnableUpdateRateOptimizations_SET(USkinnedMeshComponent* Ptr, uint8 Value) { Ptr->bEnableUpdateRateOptimizations = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_bForceWireframe_GET(USkinnedMeshComponent* Ptr) { return Ptr->bForceWireframe; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_bForceWireframe_SET(USkinnedMeshComponent* Ptr, uint8 Value) { Ptr->bForceWireframe = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_bHideSkin_GET(USkinnedMeshComponent* Ptr) { return Ptr->bHideSkin; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_bHideSkin_SET(USkinnedMeshComponent* Ptr, uint8 Value) { Ptr->bHideSkin = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_BoneVisibilityStates_GET(USkinnedMeshComponent* Ptr) { return ConvertToManage_TemplatePointerDescription(Ptr->BoneVisibilityStates); }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_BoneVisibilityStates_SET(USkinnedMeshComponent* Ptr, INT_PTR Value) { Ptr->BoneVisibilityStates = *(TArray<uint8>*)Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_bOverrideMinLod_GET(USkinnedMeshComponent* Ptr) { return Ptr->bOverrideMinLod; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_bOverrideMinLod_SET(USkinnedMeshComponent* Ptr, bool Value) { Ptr->bOverrideMinLod = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_bPerBoneMotionBlur_GET(USkinnedMeshComponent* Ptr) { return Ptr->bPerBoneMotionBlur; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_bPerBoneMotionBlur_SET(USkinnedMeshComponent* Ptr, uint8 Value) { Ptr->bPerBoneMotionBlur = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_bRecentlyRendered_GET(USkinnedMeshComponent* Ptr) { return Ptr->bRecentlyRendered; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_bRecentlyRendered_SET(USkinnedMeshComponent* Ptr, uint8 Value) { Ptr->bRecentlyRendered = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_bRenderStatic_GET(USkinnedMeshComponent* Ptr) { return Ptr->bRenderStatic; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_bRenderStatic_SET(USkinnedMeshComponent* Ptr, uint8 Value) { Ptr->bRenderStatic = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_bUseBoundsFromMasterPoseComponent_GET(USkinnedMeshComponent* Ptr) { return Ptr->bUseBoundsFromMasterPoseComponent; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_bUseBoundsFromMasterPoseComponent_SET(USkinnedMeshComponent* Ptr, uint8 Value) { Ptr->bUseBoundsFromMasterPoseComponent = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_CapsuleIndirectShadowMinVisibility_GET(USkinnedMeshComponent* Ptr) { return Ptr->CapsuleIndirectShadowMinVisibility; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_CapsuleIndirectShadowMinVisibility_SET(USkinnedMeshComponent* Ptr, float Value) { Ptr->CapsuleIndirectShadowMinVisibility = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_ForcedLodModel_GET(USkinnedMeshComponent* Ptr) { return Ptr->ForcedLodModel; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_ForcedLodModel_SET(USkinnedMeshComponent* Ptr, int32 Value) { Ptr->ForcedLodModel = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_LODInfo_GET(USkinnedMeshComponent* Ptr) { return ConvertToManage_TemplatePointerDescription(Ptr->LODInfo); }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_LODInfo_SET(USkinnedMeshComponent* Ptr, INT_PTR Value) { Ptr->LODInfo = *(TArray<FSkelMeshComponentLODInfo>*)Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_MaxDistanceFactor_GET(USkinnedMeshComponent* Ptr) { return Ptr->MaxDistanceFactor; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_MaxDistanceFactor_SET(USkinnedMeshComponent* Ptr, float Value) { Ptr->MaxDistanceFactor = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_MinLodModel_GET(USkinnedMeshComponent* Ptr) { return Ptr->MinLodModel; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_MinLodModel_SET(USkinnedMeshComponent* Ptr, int32 Value) { Ptr->MinLodModel = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_MorphTargetWeights_GET(USkinnedMeshComponent* Ptr) { return ConvertToManage_TemplatePointerDescription(Ptr->MorphTargetWeights); }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_MorphTargetWeights_SET(USkinnedMeshComponent* Ptr, INT_PTR Value) { Ptr->MorphTargetWeights = *(TArray<float>*)Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_OldPredictedLODLevel_GET(USkinnedMeshComponent* Ptr) { return Ptr->OldPredictedLODLevel; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_OldPredictedLODLevel_SET(USkinnedMeshComponent* Ptr, int32 Value) { Ptr->OldPredictedLODLevel = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_PredictedLODLevel_GET(USkinnedMeshComponent* Ptr) { return Ptr->PredictedLODLevel; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_PredictedLODLevel_SET(USkinnedMeshComponent* Ptr, int32 Value) { Ptr->PredictedLODLevel = Value; }
	
	
	DOTNET_EXPORT INT_PTR E_NewObject_USkinnedMeshComponent(UObject* Parent, char* Name)
	{
		return (INT_PTR)NewObject<USkinnedMeshComponent>(Parent, FName(UTF8_TO_TCHAR(Name)));
	}